First round of Jeff changes

--- a/abstract.tex
+++ b/abstract.tex
@@ -2,16 +2,16 @@
 
 \begin{document}
 \begin{abstract}
-  In this article, we consider a retailer that wants to
+  In this article, we consider a retailer who wants to
   dynamically price a product affected by randomness in the demand, in order to
-  maximise its profits.
+  maximise their profits.
   The pricing problem is formulated as a stochastic optimal
   control problem, where the optimal policy can be found by solving
   the associated Bellman equation.
   The aim is to investigate Approximate Dynamic Programming
   algorithms for this problem.
   For realistic retail applications, modelling the problem and solving
-  it to optimality becomes impractical and intractable.
+  it to optimality is impractical and intractable.
   Thus practitioners make simplifying assumptions and
   design suboptimal policies, but a thorough investigation
   of the relative performance of these policies is lacking.
@@ -19,7 +19,7 @@
   such trade-offs, to which this article contributes.
   We simulate the performance of two algorithms on a
   one-product system.
-  It turns out that, for more than \emph{half of the realisations},
+  It turns out that for more than \emph{half of the realisations}
   the popular, but approximate, Certainty
   Equivalent Control policy
   yields larger profits than an optimal, expected value maximising
