--- a/introduction.tex
+++ b/introduction.tex
@@ -14,14 +14,14 @@ the airline industry.
 American Airlines estimated in 1992 that the introduction of yield
 management software had, over the preceding three
 years, contributed \$500 million of additional revenue per year,
-and would continue to do so in the future \cite{smith1992yield}.
-In an example from Chilean retail \cite{bitran1998coordinating}, the authors
+and would continue to do so in the future~\cite{smith1992yield}.
+In an example from Chilean retail, the authors of~\cite{bitran1998coordinating}
 report an expected revenue improvement of 7\%-16\% from implementing
 model-driven strategies.
 For retailers with billions of pounds in revenues, small
 improvements to their revenue-management processes can be worth millions
 of pounds.
-In addition, unsold items add up to thousands of tonnes of waste per year, so
+In addition unsold items add up to thousands of tonnes of waste per year, so
 improving the control of demand for products is advantageous
 for both retailers and the environment.
 
@@ -29,9 +29,9 @@ We are interested in strategies to dynamically set the prices of
 products, and thus
 formulate the problem in a stochastic optimal control framework.
 Let $t$ denote equally spaced, discrete time points.
-Product stock levels $(S_t)$ are controlled by a pricing process
-$(\alpha_t)$, and evolve according to a transition function $f$ with random disturbances
-$(W_t)$:
+Product stock levels $S_t$ are controlled by a pricing process
+$\alpha_t$, and evolve according to a transition function $f$ with random disturbances
+$W_t$:
 \begin{equation}
   S_{t+1}=f(t,S_t,\alpha_t,W_{t+1}).
 \end{equation}
@@ -64,15 +64,15 @@ than other methods.
 Finally, the dimensions of the state, policy and exogenous
 information spaces can quickly make a numerical solution to the Bellman
 equation intractable. An explosion of dimensions can happen very
-quickly, even for one-product problems. In
-\cite{bertsimas2001dynamic}, the authors model a simple
+quickly, even for one-product problems.
+In~\cite{bertsimas2001dynamic}, the authors model a simple
 one-product demand function with uncertainty in the function
 parameters, and present an eight-dimensional dynamic programming
 solution to the problem.
 Much of the focus in the research community has therefore been on
 developing tractable algorithms with comparable performance to the
-optimal policies, see for example
-\cite{powell2011approximate} or \cite{bertsekas2012dynamic}.
+optimal policies, see for
+example~\cite{powell2011approximate} or~\cite{bertsekas2012dynamic}.
 One can either create explicit policy functions off-line, at the
 start of the decision process, or implicitly through an automated
 search for the best policy on-line for each decision point.
@@ -81,16 +81,16 @@ is the speed at which we can make our decisions in the
 future. In the classic pricing problems, the dynamics of the
 underlying system do not require instant pricing decisions. Thus,
 suboptimal decision rules that are created as they are needed, are often used
-instead \cite{talluri2006theory}. Estimation of the system and optimisation of prices are
+instead~\cite{talluri2006theory}. Estimation of the system and optimisation of prices are
 normally separated, and constraints are more easily updated at each
 decision point.
 
 There are several proposed approximations in the
 literature, although for revenue management applications, most of the domain knowledge is kept within
 respective commercial organisations.
-Many of the suboptimal pricing algorithms are justified on practical grounds
-\cite{aviv2012dynamic}, or
-from asymptotic results \cite{gallego1994optimal}.
+Many of the suboptimal pricing algorithms are justified on practical
+grounds~\cite{aviv2012dynamic}, or
+from asymptotic results~\cite{gallego1994optimal}.
 The aim of this article is to highlight the implications suboptimal policy
 choices have on the distribution of the relevant objective, and not
 only marginalised quantities such as the expected value.
@@ -102,7 +102,7 @@ Rather surprisingly, we find that, more than half the
 time, using the suboptimal CEC policy
 leads to a higher profit than using the Bellman policy. Of course, the
 Bellman policy performs better on average, but
-this is due the CEC policy generating to a larger, lower tail on the
+this is due the CEC policy generating a larger, lower tail on the
 distribution of profits than the Bellman policy.
 Heuristically, one can say that the CEC policy has a higher risk
 associated to it. We wish to emphasise that this indicates that a
