TODO on competing interesets

--- a/main.tex
+++ b/main.tex
@@ -87,7 +87,8 @@
 
 \dataccess{TODO: make github repository of code and csv files}
 \aucontribute{TODO}
-\competing{The authors declare that they have no competing interests.}
+\competing{The authors declare that they have no competing interests.
+Ask Breward how to do this + Dunnhumby?}
 \funding{This publication is based on work partially supported by the EPSRC
 Centre For Doctoral Training in Industrially Focused Mathematical
 Modelling (EP/L015803/1) in collaboration with Dunnhumby Limited.}
