Round one Farmer feedback

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -14,7 +14,7 @@ optimal policy.
 Pricing problems are often formulated as an expected value
 maximisation, but different algorithms may induce different
 distributions of the profits.
-So even though the expected value of suboptimal policies are no better
+So even though the expected values of suboptimal policies are not better
 than the optimal policy, they may have a higher profit for some
 realisations of the underlying probability distribution.
 We found in \Cref{sec:suboptimal_approximations} that there are a
@@ -25,7 +25,7 @@ than the optimal policy in more than half of the realisations.
 However, in the remaining realisations, the CEC policy resulted in
 much smaller profits. We interpret these results as an indication that
 the suboptimal policy is more risk-seeking than the optimal policy.
-The results in this article underscores the importance of looking at the impact
+The results in this article underscore the importance of looking at the impact
 different suboptimal algorithms have on the distribution of
 an objective, and not only the impact of
 marginalised statistics such as the expected value.
