--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,3 @@
-% \documentclass[a4paper,12pt]{article}
 \documentclass{rstransa}
 
 \usepackage[l2tabu, orthodox]{nag}
@@ -26,14 +25,10 @@
 
 \renewcommand{\todo}[2][]{\tikzexternaldisable\@todo[#1]{#2}\tikzexternalenable}
 \makeatother
-% \usepackage[margin=2.5cm]{geometry}
 \usepackage{breqn}
-% \usepackage{todo}
 
 \usepackage{subfiles}
 \def\biblio{\bibliographystyle{abbrvnat}\bibliography{references}}
-
-
 
 % \author{Asbj{\o}rn Nilsen Riseth\thanks{
 %     This publication is based on work partially supported by the EPSRC
@@ -58,7 +53,7 @@
   \email{riseth@maths.ox.ac.uk}}
 
 \subject{applied mathematics, revenue management}
-\keywords{dynamic pricing, stochastic optimal control, approximate dynamic programming}
+\keywords{dynamic pricing, stochastic control, approximate dynamic programming}
 
 
 \listoftodos
