--- a/references.bib
+++ b/references.bib
@@ -91,3 +91,13 @@
   year={1994},
   publisher={INFORMS}
 }
+
+@article{farmer2017uncertainty,
+  title={Uncertainty quantification and optimal decisions},
+  author={Farmer, C. L.},
+  journal={Proc. R. Soc. A},
+  volume={473},
+  pages={20170115},
+  year={2017},
+  organization={The Royal Society}
+}
