--- a/abstract.tex
+++ b/abstract.tex
@@ -11,21 +11,24 @@
   The aim is to investigate Approximate Dynamic Programming
   algorithms for this problem.
   For realistic retail applications, modelling the problem and solving
-  it to optimality is impractical and intractable.
+  it to optimality is intractable.
   Thus practitioners make simplifying assumptions and
-  design suboptimal policies, but a thorough investigation
+  design suboptimal policies,
+  but a thorough
+  investigation
   of the relative performance of these policies is lacking.
   A challenge in Approximate Dynamic Programming is to better understand
   such trade-offs, to which this article contributes.
   We simulate the performance of two algorithms on a
   one-product system.
-  It turns out that for more than \emph{half of the realisations}
+  It turns out that for more than \emph{half of the realisations} of
+  the random disturbance,
   the popular, but approximate, Certainty
   Equivalent Control policy
   yields larger profits than an optimal, expected value maximising
   policy.
   However, this approximate algorithm performs significantly worse in
-  the \phantom{the} %to fix overfull hbox
+  the
   remaining realisations, implying a more risk-seeking attitude by the
   retailer.
   % However, this approximate algorithm is less robust to model misspecification, and thus
