--- a/bellman_control.tex
+++ b/bellman_control.tex
@@ -30,7 +30,7 @@ solve it numerically for an example system.
 
 Consider a system over discrete, equispaced time points
 $t=0,1,\dots,T$, with state
-$S_t$ and policy process $\alpha_t$ that takes values in a closed
+$S_t$ and pricing process $\alpha$ such that the $\alpha_t$ that take values in a closed
 interval $A=[a_{\mathrm{min}},a_{\mathrm{max}}]\subset\mathbb R_+$.\footnote{In
   practice, policy values may have additional constraints that depend
   on the current state,
@@ -45,7 +45,7 @@ function $q:A\to\mathbb R_+$, which is bounded, continuous and decreasing.
 Exogenous influences on demand are considered as randomness in the
 system, and are
 modelled in a multiplicative fashion by a stochastic process
-$(W_t)$ taking non-negative values. See, for
+$W=(W_1,\dots,W_T)$ taking non-negative values. See, for
 example,~\cite[Ch.~7]{talluri2006theory} for a discussion of
 popular demand models and the modelling of uncertainty.
 
@@ -68,7 +68,7 @@ stock $C\geq 0$.\footnote{In some situations, unsold items at time $T$
 Let $\mathcal A$ denote the set of feasible processes that take values
 in $A$.
 Define the value of having stock $s$ at time $t\leq T$
-by the \emph{value function}
+by the \emph{value function} $v$, such that
 \begin{align}\label{eq:value_function_def}
   v(t,s)&=\max_{\alpha\in\mathcal A} J(t,s,\alpha),\quad\text{where}\\
   J(t,s,\alpha)&=
@@ -82,7 +82,7 @@ This leads us to the following mathematical formulation of the pricing
 problem:
 \begin{mydef}
   Given an initial stock $S_0>0$ and a cost per unit unsold stock $C\geq
-  0$, the \emph{pricing problem} is to find $\alpha\in\mathcal A$ such that
+  0$, the \emph{pricing problem} is to find a pricing process $\alpha\in\mathcal A$ such that
   \begin{equation}
     J(0,S_0,\alpha) = v(0,S_0).
   \end{equation}
@@ -119,6 +119,7 @@ Then we set
   &\hat t &= t,
   &\hat W_{\hat t}&=W_{t}.
 \end{align}
+To be precise, the dimensional time $t$ should be divided by $1$ unit of time.
 The dimensionless functions $\hat q(\hat a)$ and $\hat Q(\hat s,\hat
 a, \hat w)$,
 for forecasted demand
@@ -132,16 +133,16 @@ the processes $\alpha_t/a_{\mathrm{max}}$, where $\alpha\in \mathcal
 A$. Now we can define the dimensionless value function
 \begin{align}\label{eq:value_function_def_nondim}
   \hat v(\hat t,\hat s)&=\max_{\hat \alpha\in\hat{\mathcal A}}
-                    \hat J(\hat t,\hat s,\hat \alpha),\quad\text{where}\\
+                         \hat J(\hat t,\hat s,\hat \alpha),\quad\text{where}\\
   \hat J(\hat t,\hat s,\hat \alpha)&=
-                 \mathbb E_{\hat W}\left[ \sum_{\tau=\hat t}^{\hat T-1}
-                 \hat \alpha_\tau\hat Q(\hat
+                                     \mathbb E_{\hat W}\left[ \sum_{\tau=\hat t}^{\hat T-1}
+                                     \hat \alpha_\tau\hat Q(\hat
                                      {S_\tau^\alpha},\hat{\alpha_\tau},\hat
                                      W_{\tau+1})
-                 - \hat C \hat{S}_{\hat{T}}^\alpha \mid \hat{S}_{\hat{t}}^\alpha =
-                                \hat s
-                 \right].
-                 \label{eq:value_function_def_nondim2}
+                                     - \hat C \hat{S}_{\hat{T}}^\alpha \mid \hat{S}_{\hat{t}}^\alpha =
+                                     \hat s
+                                     \right].
+                                     \label{eq:value_function_def_nondim2}
 \end{align}
 Finally, the dimensionless optimal control problem
 is to find $\hat \alpha^*\in\hat{\mathcal A}$, such that
@@ -164,14 +165,15 @@ Programming principle, which states that $v$ can be defined
 recursively by
 \begin{equation}\label{eq:dynamic_programming_discrete}
   v(t,s)=\max_{a\in A}\mathbb E_{W}\left[
-          aQ(s,a,W_{t+1})
-          +v(t+1,s-Q(s,a,W_{t+1}))\right].
+    aQ(s,a,W_{t+1})
+    +v(t+1,s-Q(s,a,W_{t+1}))\right].
 \end{equation}
 Thus, the value function is the solution to the backwards-in-time
 recursive relation~\eqref{eq:dynamic_programming_discrete} with
 terminal value $v(T,s)=-Cs$, and the optimal policy
 function $a(t,s)$ is given by the argmax for each $(t,s)$.
-The recursion is called the \emph{Bellman equation}, and a discussion
+The recursion~\eqref{eq:dynamic_programming_discrete} is called the
+\emph{Bellman equation}, and a discussion
 of its validity can be found, for example, in~\cite{bertsekas2005dynamic}.
 Analytical solutions to Bellman equations are only available in very
 rare cases, and thus numerical approaches are normally needed to
@@ -182,22 +184,22 @@ problem, using the Bellman equation:\todo{Decorate with some algorithm environme
 \begin{enumerate}
 \item Create a grid of equispaced points $0=s_1<s_2<\cdots<s_K=S_0$, and arrays $v^K\in\mathbb R^{K\times(T+1)}$,
   $\alpha^K\in\mathbb R^{K\times T}$.
-\item Set $Iv^K(s)=-Cs$.
-\item Set $v^K[i,T]=Iv^K(s_i)$ for $i=1,\dots, K$.
+\item Set $I[v^K](s)=-Cs$.
+\item Set $v^K[i,T]=I[v^K](s_i)$ for $i=1,\dots, K$.
 \item For $t = T-1,\dots,0$:
   \begin{enumerate}
   \item Set $\displaystyle v^K[i,t]=\max_{a\in A}\mathbb E_{W_{t+1}}\left[ aQ(s_i,a,W_{t+1})
-      +Iv^K(s_i-Q(s,a,W_{t+1}))\right]$\\ for $i=1,\dots,K$.
+      +I[v^K](s_i-Q(s,a,W_{t+1}))\right]$\\ for $i=1,\dots,K$.
   \item Set $\alpha^K[i,t]$ to the maximiser above.
-  \item Set $Iv^K(s) = \mathrm{Interpolate}(s, {(s_i)}_i,{(v^K[i,t])}_i)$.
+  \item Set $I[v^K](s) = \mathrm{Interpolate}(s, {(s_i)}_i,{(v^K[i,t])}_i)$.
   \end{enumerate}
 \item Return $v^K,\alpha^K$.
 \end{enumerate}
 The expectation above is approximated using Monte-Carlo simulation, and
-we chose to use a linear interpolation for $Iv^K(s)$.
+we chose to use piecewise linear interpolation for $I[v^K](s)$.
 
 \subsection{Example system}\label{sec:bellman_example_markdown}
-In order to investigate the optimal pricing of a concrete system, we
+In order to investigate the optimal pricing of a specific system, we
 choose to look at a family of demand functions of the form
 $q(a)=q_1e^{-q_2a}$, where $q_1,q_2>0$. For a discussion
 about their properties and usage in modelling demand, see~\cite[Ch.~7]{talluri2006theory}.
@@ -217,13 +219,13 @@ $X\sim \mathrm{Beta}(\mu,\nu)$,\footnote{A
   $\mathrm{Beta}(\mu,\nu)$ random variable has probability density
   function on $[0,1]$, given by
   $p(x)=\frac{x^{\mu-1}{(1-x)}^{\nu-1}}{B(\mu,\nu)}$.
-  The function $B(\mu,\nu)$ acts as a normalising factor.
+  The function $B(\mu,\nu)$ is the normalising factor.
 }
 and $\mu=\nu=\frac{1}{8\gamma^2}-\frac{1}{2}$.
 To ensure that $X$ is unimodal, we require that $\gamma^2<1/12$.
 
 Set $\gamma = 5\times 10^{-2}$, $C=1$ and $T=3$.
-The solution to the Bellman equation, and the corresponding optimal
+The numerical solution to the Bellman equation, and the corresponding optimal
 pricing policy is shown in \Cref{fig:markdown_bellman}.
 \begin{figure}[htbp]
   \centering
@@ -273,7 +275,7 @@ pricing policy is shown in \Cref{fig:markdown_bellman}.
   \caption{The value function and corresponding
     optimal control function for the pricing problem.
     The regions where the value function moves from a linear to a
-    non-linear regime
+    nonlinear regime
     corresponds to when the pricing policy hits the upper bound 1.
   }\label{fig:markdown_bellman}
 \end{figure}
@@ -289,9 +291,10 @@ By sampling from the stochastic process $W=(W_1,\dots,W_T)$, we can
 estimate the random variables $\alpha_t$ and $P(\alpha)$.
 The plots in \Cref{fig:bellman_simulation} show the results of
 simulating the system \num{10000} times.\footnote{Preliminary
-   investigations indicated that \num{10000}
-  simulations is enough to get a good representation of
-  the distributions in this article.
+  investigations indicated that \num{1000}
+  simulations is sufficient to obtain an accurate representation of
+  the distributions in this article. However, we have chosen to use
+  more when this is computationally convenient.
 }
 
 \begin{figure}[htbp]
@@ -319,10 +322,12 @@ simulating the system \num{10000} times.\footnote{Preliminary
   \begin{subfigure}[t]{0.5\textwidth}
     \begin{tikzpicture}[scale=0.8]
       \begin{axis}[
-        xlabel=$P(\alpha)$,
+        xlabel=Profit $P(\alpha)$,
         ylabel=Count,
         title={Realised profit},
-        legend cell align=left
+        legend cell align=left,
+        xmin=0.565, xmax=0.69,
+        ymax=1400,
         ]
         \addplot[blue,hist={data=x,bins=40}] table [y index = 0, col
         sep=comma]
@@ -330,34 +335,15 @@ simulating the system \num{10000} times.\footnote{Preliminary
       \end{axis}
     \end{tikzpicture}
   \end{subfigure}%
-  % \begin{subfigure}[b]{0.5\textwidth}
-  %   \begin{tikzpicture}[scale=0.8]
-  %     \begin{axis}[
-  %       title={$\alpha_t^C$, simulated values},
-  %       boxplot/draw direction=y,
-  %       xtick={1,2,3},
-  %       xticklabels={$t=0$, $t=1$, $t=2$},
-  %       ymin=0.6,ymax=0.75
-  %       ]
-  %       \addplot+[boxplot] table[y index=3,col sep=comma]
-  %       {./data/markdown_bellman_det_policies.csv};
-  %       \addplot+[boxplot] table[y index=4,col sep=comma]
-  %       {./data/markdown_bellman_det_policies.csv};
-  %       \addplot+[boxplot] table[y index=5,col sep=comma]
-  %       {./data/markdown_bellman_det_policies.csv};
-  %     \end{axis}
-  %   \end{tikzpicture}
-  % \end{subfigure}%
-  \caption{Simulations of the pricing system, started at $S_0=1$ % TODO: subscript _0 causes issues with label re-run warnings
-    and
-    controlled by the optimal policy $\alpha$ shown in
+  \caption{Simulations of the pricing system, started at $S_0=1$
+    and controlled by the optimal policy $\alpha$ shown in
     \Cref{fig:markdown_bellman}.
     The left figure is a box plot
     that shows the median, the quartiles and the extremal prices observed
     in the simulations.
     As we see, the variance of the prices increases
     in time, reflecting the wider range of realised remaining stock at these times.
-    The right figure is a histogram of the total profit over
+    The right hand figure is a histogram of the total profit over
     the pricing period.
   }\label{fig:bellman_simulation}
 \end{figure}
