--- a/control_comparison.tex
+++ b/control_comparison.tex
@@ -10,7 +10,7 @@
 In this section we will look at a suboptimal policy among the class of
 algorithms that calculate decisions on-line.
 Whenever a decision must be made, these methods simulate the future
-behaviour of the system and optimise the current decision base don
+behaviour of the system and optimise the current decision based on
 these simulations.
 We consider a special case called the
 \emph{Certainty Equivalent Control} policy, which uses a point
@@ -47,7 +47,7 @@ problem calculates the current price using the following steps:
   \begin{equation}
     \max_{\mathbf a\in A^{T-t}}\left\{\sum_{\tau=t}^{T-1}\mathbf
       a_\tau Q(S_\tau^{\mathbf a},\mathbf
-      a_\tau,w_{\tau})-CS_T^{\mathbf a}\right\},
+      a_\tau,w_{\tau+1})-CS_T^{\mathbf a}\right\},
     \quad \text{s.t.}\quad S_t^{\mathbf a}=s.
   \end{equation}
 \item Set the price corresponding to a maximizer
@@ -186,7 +186,7 @@ range of parameters Subsection~\ref{sec:suboptimal_approximations}\ref{sec:param
 The example system in Subsection~\ref{sec:bellman_optimal_control}\ref{sec:bellman_example_markdown} has a demand
 function of the form $q(a)=q_1e^{-q_2a}$, where $q_1=e^2/3$ and
 $q_2=3$. We can therefore compare the optimal Bellman policy with the
-pricing policy that a CEC algorithm would create.
+pricing policy that a CEC algorithm would imply.
 Denote the Bellman policy function by $a^B$, and consider
 $a^B(t,s)-a^C(t,s)$ for each $t=0,\dots,T-1$. The plot in
 \Cref{fig:bellman_det_policy_difference} shows this difference.
@@ -224,24 +224,24 @@ profits in the remaining realisations.
   \centering
   \begin{tikzpicture}[scale=0.8]
     \begin{axis}[
-      xlabel=$P(\alpha^B)$,
+      xlabel=Profit $P(\alpha^B)$,
       ylabel=Count,
       title={Simulations of Bellman policy},
-      xmin=0.565, xmax=0.695,
-      ymax=2000,
+      xmin=0.565, xmax=0.69,
+      ymax=1400,
       ]
-      \addplot[blue,hist={bins=30}] table [y index = 0,col sep=comma]
+      \addplot[blue,hist={bins=40}] table [y index = 0,col sep=comma]
       {./data/markdown_bellman_det_vals.csv};
     \end{axis}
   \end{tikzpicture}%
   \begin{tikzpicture}[scale=0.8]
     \begin{axis}[
-      xlabel=$P(\alpha^C)$,
+      xlabel=Profit $P(\alpha^C)$,
       title={Simulations of CEC policy},
-      xmin=0.565, xmax=0.695,
-      ymax=2000,
+      xmin=0.565, xmax=0.69,
+      ymax=1400,
       ]
-      \addplot[blue,hist={bins=30}] table [y index = 1,col sep=comma]
+      \addplot[blue,hist={bins=40}] table [y index = 1,col sep=comma]
       {./data/markdown_bellman_det_vals.csv};
       \draw[<-] (axis cs:0.62,220) --
       (axis cs:0.605,600) node[anchor=south] {Fatter lower tail};
@@ -249,7 +249,7 @@ profits in the remaining realisations.
   \end{tikzpicture}
 
   \vspace{1em}
-  \begin{tikzpicture}
+  \begin{tikzpicture}[scale=0.8]
     \begin{axis}[
       xlabel=$P(\alpha^B)-P(\alpha^C)$,
       ylabel=Count,
@@ -310,26 +310,27 @@ Then,
 for each combination of $(C,\gamma)$,
 we can create a heatmap of the difference between the two policy
 functions by varying the parameters $q_1,q_2$.
-The relative $L^2$ difference between the CEC and Bellman policy outcomes
+The relative $L^2$ distance between the CEC and Bellman policy outcomes
 is shown in \Cref{fig:profit_diff_heatmaps}. The norms were approximated
 with $1000$ samples from $(W_1,W_2,\dots,W_T)$.
 Comparing the left and right column, we see that the relative difference doubles as
 the standard deviation $\gamma$ is doubled. The cost $C$ plays a large
 role, both in terms of the shape of the difference surface and its
 magnitude.
-The black region at the bottom right of the plots correspond to popular,
+The black region at the bottom right of the plots corresponds to popular,
 low-elasticity products where both policies choose to sell at the
 maximum price $a=1$.
 \begin{figure}[htbp]
   \includegraphics[width=\textwidth]{./img/profit_diff_heatmaps}
   \caption{The relative $L^2$ difference
     $\|P(\alpha^B)-P(\alpha^C)\|_2/\|P(\alpha^B)\|_2$ representing
-    how different the CEC policy is to the optimal Bellman policy.
+    how different the CEC policy is from the optimal Bellman policy.
     Each plot defines a combination of $(C,\gamma)$, whilst
     the axes vary the parameters $q_1,q_2$ of the demand function
     $q(a)=q_1e^{-q_2a}$.
     The white dot on the bottom, left plot corresponds to the
-    parameters chosen for the experiments in this article.
+    parameters chosen for the experiments in this article. The gray
+    dots correspond to the parameters in \Cref{tbl:paramcomparisons}.
   }\label{fig:profit_diff_heatmaps}
 \end{figure}
 
@@ -340,7 +341,7 @@ white dot in the
 bottom, left subfigure in \Cref{fig:profit_diff_heatmaps}.
 This difference is in the middle of that seen for all the
 combinations of parameters, so the conclusions made in the article
-should be considered as relevant for a wider range of systems.
+can be considered as relevant for a wider range of systems.
 \Cref{tbl:paramcomparisons} provides further data to underscore
 the claim that the CEC policy
 outperforms the Bellman policy for the
@@ -350,7 +351,7 @@ more than 50\% of the time for all the parameter
 combinations considered in this article.
 We can also see from the table that the implicit risk-seeking attitude
 of the CEC policy increases with
-the relative $L_2$ difference: The frequency at which the CEC policy
+the relative $L^2$ distance: The frequency at which the CEC policy
 outperforms Bellman increases, at the expense of a larger
 underperformance in the remaining realisations.
 The values in \Cref{tbl:paramcomparisons} were approximated using \num{10000} samples
@@ -361,7 +362,7 @@ grey dots in \Cref{fig:profit_diff_heatmaps}.
   \centering
   \begin{tabular}{llllcccc}
     $C$ & $\gamma$ & $q_1$ & $q_2$ & $\mathcal Q_{0.05}$
-    &Median & $\mathcal Q_{0.95}$ &$L_2$\\
+    &Median & $\mathcal Q_{0.95}$ &$L^2$\\
     \toprule
     $0.25$ & $0.05$ & $2.0$ & $4.0$  & \textbf{-0.4} & \textbf{-0.3} & \textbf{0.6} & \textbf{0.4}\\
     $0.25$ & $0.1$ & $1.33$ & $2.67$ & \textbf{-0.5} & \textbf{-0.0} & \textbf{0.6} & \textbf{0.3}\\
@@ -372,12 +373,12 @@ grey dots in \Cref{fig:profit_diff_heatmaps}.
     &&&&$\times 10^{-2}$&$\times 10^{-2}$&$\times 10^{-2}$&$\times 10^{-2}$\\
     \bottomrule
   \end{tabular}
-  \caption{Statistics comparing $P(\alpha^B)$ and $P(\alpha^C)$ for six different
+  \caption{Statistics comparing profits $P(\alpha^B)$ and $P(\alpha^C)$ for six different
     parameter combinations. The columns $\mathcal Q_s$ represent the
     the $s^{\text{th}}$ quantile of the relative
     difference
     $1-P(\alpha^C)/P(\alpha^B)$. %Median is the same as $\mathcal Q_{0.5}$.
-    The values in the column $L_2$ refers to the relative $L_2$
+    The values in the column $L^2$ refers to the relative $L^2$
     difference $\|P(\alpha^B)-P(\alpha^C)\|_2/\|P(\alpha^B)\|_2$
     from \Cref{fig:profit_diff_heatmaps}. Each of the parameter
     combinations correspond to a grey dot in \Cref{fig:profit_diff_heatmaps}.
